@@ -1,10 +1,12 @@
 Changes for 2.3.4
 
 New features:
+....I..PS. [ZBXNEXT-2359] made server and proxy refuse to start if StartPollersUnreachable=0, but other pollers are started (asaveljevs)
 ....I..PS. [ZBX-8557] implemented housekeeper 30 minutes startup delay (Arturs)
 A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)
 
 Bug fixes:
+A......... [ZBX-8430] fixed SQL errors in drule.delete API method (Andrejs)
 A.F....... [ZBX-8510] fixed possible deadlocks when updating IT services (Pavels, Sasha)
 
 --------------------------------------------------------------------------------
@@ -291,6 +293,7 @@ A.......S. [ZBX-8473] improved performance of deleting triggers by API and serve
 A.F....... [ZBX-1357] updated Polish and Spanish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-8577] added wmi.get[] to the list of suggested items (asaveljevs)
 ..F....... [ZBX-8216] fixed screen import error (Andrejs)
 A.F....... [ZBX-8510] fixed possible deadlocks when updating IT services (Pavels, Sasha)
 ...G...... [ZBX-8512] fixed processing of web.page.regexp without a newline character in the end of http GET response (Arturs)
